# vox

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml  renovate.json  vox.toml.example
.ai/: HUMAN_RUNBOOK.md  RULES.md
.ai/COMMANDS/: check_tests.md  commit.md  create-prd.md  create-rules.md  execute.md  handoff.md  library-skill.md  phase-intent-check.md  plan.md  pr.md  prime.md  push.md  release-notes.md  retro.md  review.md  status-sync.md  tech-debt.md  validate.md
.ai/COMMANDS/_shared/: README.md  review-checklist.md  story-writing.md
.ai/PLANS/: 001-push-to-talk.md  002-tray-packaging-ux.md  003-preloaded-recording-cues.md  004-autosave-settings-screen.md  README.md
.ai/REF/: README.md  just-targets.md  plan-authoring.md  status-surfaces.md  testing-and-gates.md
.ai/REF/project-types/: cli-tool.md
.ai/SPECS/001-push-to-talk/: PRD.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build-release-assets.yml  ci.yml  pr_template_check.yml  publish-pypi.yml  release-please.yml  renovate.yml
docs/dev/: status.md
docs/ideas/: 2026-03-17_13-49-14__Branch-Push-to-talk-transcription-in-Python__chat.json
media/audio/: end.aup3  start.aup3
src/vox/: __init__.py  __main__.py  audio_cues.py  cli.py  commands.py  config.py
src/vox/capture/: __init__.py  stream.py
src/vox/gui/: __init__.py  settings_launcher.py  settings_window.py  stop_window.py  tray.py
src/vox/hotkey/: __init__.py  register.py
src/vox/inject/: __init__.py  clipboard.py  keystroke.py
src/vox/transcribe/: __init__.py  exceptions.py  faster_whisper_backend.py
tests/: conftest.py
tests/integration/: test_capture_transcribe.py  test_capture_transcribe_inject.py
tests/unit/: test_audio_cues.py  test_capture.py  test_cli.py  test_commands.py  test_config.py  test_hotkey.py  test_inject.py  test_settings_hotkey_capture.py  test_settings_launcher.py  test_settings_window.py  test_transcribe.py
